fix: select friends line Alignment

--- a/src/styles/SelectModal.module.css
+++ b/src/styles/SelectModal.module.css
@@ -118,7 +118,6 @@
     height: 35px;
     background-color: var(--color-primary);
     position: absolute;
-    text-align: center;
 }
 
 .list_container.check {
@@ -148,10 +147,9 @@
 }
 
 .list_text_box {
+    top: 50%;
+    transform: translateY(-50%);
     position: absolute;
-    display: block;
-    margin: 0px;
-    margin-top: -2px;
 }
 
 .list_text_box p {
